--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "85ef9537",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "4     MED         BLUE         AMERICAN STAFF / MIX         40218         5  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_env",
+   "display_name": "pyenv",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.14.1"
   }
  },
  "nbformat": 4,
