--- a/main.ipynb
+++ b/main.ipynb
@@ -10,23 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "dc029cda",
+   "execution_count": 1,
+   "id": "32a5f1b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import seaborn as sns\n"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 47,
-=======
    "execution_count": 2,
->>>>>>> f02498ba38043b120634d11c03fd212f261974f7
    "id": "85ef9537",
    "metadata": {},
    "outputs": [
@@ -204,11 +201,7 @@
        "4     MED         BLUE         AMERICAN STAFF / MIX         40218         5  "
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 47,
-=======
      "execution_count": 2,
->>>>>>> f02498ba38043b120634d11c03fd212f261974f7
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "341fc0f2",
    "metadata": {},
    "outputs": [
@@ -242,7 +235,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "b57bf64d",
    "metadata": {},
    "outputs": [],
@@ -271,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "0baef2a2",
    "metadata": {},
    "outputs": [
@@ -298,7 +291,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "8aed7850",
    "metadata": {},
    "outputs": [],
@@ -376,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "702cf3a1",
    "metadata": {},
    "outputs": [
@@ -403,7 +396,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "fc184c07",
    "metadata": {},
    "outputs": [
@@ -450,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "48ba5b6a",
    "metadata": {},
    "outputs": [
@@ -763,7 +756,7 @@
        "[23432 rows x 17 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "id": "691a6fe5",
    "metadata": {},
    "outputs": [
@@ -811,7 +804,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "d39c95b6",
    "metadata": {},
    "outputs": [
@@ -875,7 +868,7 @@
        "Name: sourcezipcode, Length: 64668, dtype: object"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "id": "04d33fde",
    "metadata": {},
    "outputs": [],
@@ -919,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "c1c737e6",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1078,7 @@
        "4         DOG   N    MED         AMERICAN STAFF / MIX         BLUE     N  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,11 +1109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-<<<<<<< HEAD
    "display_name": "py_data_env",
-=======
-   "display_name": "pyenv",
->>>>>>> f02498ba38043b120634d11c03fd212f261974f7
    "language": "python",
    "name": "python3"
   },
@@ -1134,7 +1123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.1"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
